# social_media_agent

./: .gitignore  README.md
backend/: pyproject.toml  server.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
